kubernetes/aline-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - pathType: Exact
        path: "/(users|login).*"
        backend:
          service:
            name: aline-user
            port: 
              number: 8070
      - pathType: Exact
        path: "/applica(nts|tions).*"
        backend:
          service:
            name: aline-underwriter
            port: 
              number: 8071
      - pathType: Exact
        path: "/(accounts|members/.+/accounts)"
        backend:
          service:
            name: aline-account
            port: 
              number: 8072
      - pathType: Exact
        path: "/(members|banks).*"
        backend:
          service:
            name: bank
            port: 
              number: 8083
      - pathType: Exact
        path: "/(transactions/?.*|(members|accounts)/.+/transactions)"
        backend:
          service:
            name: aline-transaction
            port: 
              number: 8073
      - pathType: Exact
        path: "/adminer"
        backend:
          service:
            name: adminer
            port: 
              number: 8084
